<resources>
    <string name="app_name">CalendarApp</string>

    <!-- MainActivity -->
    <string name="header">CalendarApp</string>
    <string name="create_new_event">Create New Event</string>

    <!-- CreateEvent -->
    <string name="create_event_header">Create Event</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="title_hint">Title</string>
    <string name="desc_hint">Description</string>
    <string name="location_hint">Location</string>
</resources>
